cliqz@cliqz.com/chrome/skin/browser.css
/* CLIQZ BINDINGS  */

/*
	IMPORTANT !!!

	Change version of all -moz-binding if components.xml
	is changed to force its refresh between updates

*/

#PopupAutoCompleteRichResult {
  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#autocomplete-rich-result-popup-cliqz");
}

/* bookmark icon ovveride */
#star-button {
  list-style-image: url(chrome://cliqzres/content/skin/star-icons.png);
}

@media (min-resolution: 2dppx) {
  #star-button {
    list-style-image: url(chrome://cliqzres/content/skin/star-icons@2x.png);
  }
}

.autocomplete-richlistbox {
  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#autocomplete-richlistbox-cliqz");
}

/* result item */
.autocomplete-richlistitem {
  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#autocomplete-richlistitem-cliqz");
  padding: 5px 0;
  border-width: 1px 1px 0px 0;
  border-style: solid;
  border-color: #cccccc;
}

/*
#PopupAutoCompleteRichResult  * {
  border: 1px solid red;
  background-color: green;
}
*/

.cliqz-no-margin-padding {
  margin: 0px;
  padding: 0px;
}

.button-cliqz {
  -moz-binding: url("chrome://cliqz/content/components.xml?v=3#button-cliqz");
  cursor: pointer;
}

.cliqz-ac-site-icon-ssl {
  margin-left: 13px;
  background: url(chrome://cliqzres/content/skin/lock_light.png) no-repeat 0% 60%;
}

.cliqz-left-separator {
  width: 13px;
  height: 24px;
}

.cliqz-separator-10 {
  width: 10px;
}

.cliqz-url-box {
  margin: 0px;
  padding: 0px;
}

.cliqz-image-box {
}

.cliqz-ac-image {
  width: 96px; /* 16 */
  height: 54px; /* 9 */
  margin-left: 12px;
}

.cliqz-image {
}

.cliqz-image-desc {
  background-color: rgba(0, 0, 0, 0.6);

  font-weight: bold;
  font-size: 9pt;
  color: white;
  padding: 2px 5px 2px 5px;
  margin: 0px 2px 6px 0px;
}

/* switch to tab*/
.ac-action-text {
  background-color: lightgrey;
  color: white;
  padding: 2px 4px;
}

.toolbarbutton-1 {}
/* CLIQZ STYLE */

/* autocomplete popup container */
#PopupAutoCompleteRichResult {
  max-height: 165px;
  min-height: 250px;
}

.ac-type-icon {
  display: none;
}

/* progress bar */
#cliqz-progress {
  height: 5px;
  background-color: green;
}

.autocomplete-richlistitem[type="cliqz-results"] {
  /* background-color: green; */
}

.autocomplete-richlistitem[type="cliqz-suggestions"],
.autocomplete-richlistitem[type="cliqz-custom"] {
  /* background-color: lightgreen; */
}

/* general autocomplete item styles */
.ac-title-box {
  height: 20px;
  font-size: 12pt;
  font-weight: 500;
  padding-top: 6px;
  /* windows */
  margin: 0px;
}

.autocomplete-richlistitem .ac-title-box {
  color: #000000;
}

.autocomplete-richlistitem[type="cliqz-suggestions"] .ac-title-box,
.autocomplete-richlistitem[type="cliqz-custom"] .ac-title-box  {
  color: #003366;
  height: 12px;
  padding: 6px 0 2px 0;
}

.autocomplete-richlistitem[type="cliqz-suggestions"] .ac-url-box,
.autocomplete-richlistitem[type="cliqz-custom"] .ac-url-box  {
  display: none;
}

.cliqz-ac-title-suggestion-desc {
  color: #999999;
  font-weight: 500;
}

.cliqz-ac-title-suggestion {
  color: #333333;
  font-weight: 500;
  font-style: italic;
}

.cliqz-suggestions-container {
  background-color: #dddddd;
}

.cliqz-suggestions-source {
  height: 30px;
  width: 2px;
  /*
  height: 30px;
  margin-right: 10px;
  border-left: 5px solid #cccccc;
  */
}

.cliqz-one-space {
  border-left: 5px solid transparent;
}

.cliqz-suggestion {
  padding: 1px 5px 2px 5px;
  margin: 5px 5px 1px 3px;
}

.cliqz-suggestion:hover, .cliqz-suggestion-default {
  background-color: #eeeeee;
}

.cliqz-suggestion * {
  cursor: pointer;
}

.cliqz-suggestion-text {
  margin: 0px;
  padding: 0px;
}

.cliqz-suggestion-extra {
  margin: 0px;
  padding: 0px;
  font-weight: 600;
}

.cliqz-engine-container {
  background-color: #eeeeee;
}

.cliqz-engines-text {
  padding: 0px 10px 0px 8px;
  line-height: 31px;
  color: #333333;
  width: 150px;
  overflow: hidden;
  transition: all linear 0.5s;
}

.cliqz-navigation-message {
  padding-left: 10px;
  line-height: 31px;
  font-style: italic;
  color: #999999;
}

.cliqz-separator-engines {
  width: 80px;
  height: 0px;
}

.cliqz-separator-inter-engines {
  border-left: 1px solid #cccccc;
}

.cliqz-engine {
  line-height: 16px;
  margin: 8px 5px;
  height: 16px;
  /*
  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
  */
}

.cliqz-engines {
  margin-right: 10px;
  width: 0px;
  overflow: hidden;
  background-color: #eeeeee;
  transition: all linear 0.8s ;
}

.cliqz-engines-container:hover .cliqz-engines {
  width: 400px;
}

.cliqz-engines-container:hover .cliqz-engines-text {
  opacity: 0;
}


.cliqz-engines:hover {
  width: 400px;
}

.cliqz-engines:hover .cliqz-engines-text {
  opacity: 0;
}

.cliqz-engine-default {
  border-color: green;
  background-color: lightgrey;
}

.cliqz-engine:hover {
  cursor: pointer;
}

.cliqz-ac-title-suggestion-extra {
  color: #333333;
  font-weight: 600;
  font-style: italic;
}

/* source color */
.cliqz-ac-source-icon {
  width: 10px;
  height: 1px;
  margin-left: 13px;
}

.cliqz-ac-description {
  font-size: 10pt;
  padding-left: 13px;
  padding-bottom: 1px;
  margin-bottom: 6px;
  color: #888888;
}

.cliqz-ac-description-box {
  height: 34px;
  overflow: hidden;
  padding-right: 30px;
}

.autocomplete-richlistitem[type="cliqz-results"] .cliqz-ac-source-icon {
  height: 9px;
  width: 9px;
  background-color: #0099FF;
  border-radius: 50%;
}

.autocomplete-richlistitem[type="cliqz-suggestions"] .cliqz-ac-source-icon,
.autocomplete-richlistitem[type="cliqz-custom"] .cliqz-ac-source-icon {

}

/* history */
.autocomplete-richlistitem[type="favicon"] .cliqz-ac-source-icon,
.autocomplete-richlistitem[type="action favicon"] .cliqz-ac-source-icon {

}

.autocomplete-richlistitem[type="bookmark"] .cliqz-ac-source-icon,
.autocomplete-richlistitem[type="action bookmark"] .cliqz-ac-source-icon,
.autocomplete-richlistitem[type="tag"] .cliqz-ac-source-icon,
.autocomplete-richlistitem[type="action tag"] .cliqz-ac-source-icon {

}

.autocomplete-richlistitem[type="cliqz-results"][selected="true"] {

}

.autocomplete-richlistitem[type="cliqz-suggestions"][selected="true"],
.autocomplete-richlistitem[type="cliqz-custom"][selected="true"] {

}

/* history */
.autocomplete-richlistitem[type="favicon"][selected="true"] {

}

.autocomplete-richlistitem[type="bookmark"][selected="true"],
.autocomplete-richlistitem[type="tag"][selected="true"] {

}

.autocomplete-richlistitem[selected="true"] {
  border-color: black;
  border-width: 1px 1px 1px 0;
}

.autocomplete-richlistitem[selected="true"] + .autocomplete-richlistitem {
  border-width: 0px 1px 0px 0;
}

.autocomplete-richlistitem:last-of-type {
  border-bottom-width: 1px;
}

.autocomplete-richlistitem[selected="true"] + .autocomplete-richlistitem:last-of-type {
  border-bottom-width: 1px;
}


.autocomplete-richlistitem[selected="true"] {
  background-color: white;
  background-image: none;
  /* override windows aero styles*/
  border-radius: 0px;
  outline: none;
}

.autocomplete-richlistitem:hover .cliqz-ac-source-icon,
.autocomplete-richlistitem[selected="true"] .cliqz-ac-source-icon {

}
.autocomplete-richlistitem:hover {
  background-color: rgba(204, 204, 204, 0.2);
}

.autocomplete-richlistitem:hover .cliqz-logo-container {
  background: url(chrome://cliqzres/content/skin/popout_icon.png) no-repeat center center;
}

.autocomplete-richlistitem:hover .cliqz-logo-container .cliqz-ac-logo-icon {
  background: none;
}

.autocomplete-richlistitem[selected="true"]:hover {
  background-color: white;
}

.cliqz-ac-logo-icon {
  height: 36px;
  width: 40px;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 36px 36px;
}

.cliqz-logo-container {
  width: 40px;
  height: 48px;
  margin: 0 24px 0 18px;
}

.cliqz-logo-container:hover {
  background: url(chrome://cliqzres/content/skin/popout_icon.png) no-repeat center center;
}

.cliqz-logo-container:hover .cliqz-ac-logo-icon {
  background: none;
}


.button-cliqz:hover {
  background: url(chrome://cliqzres/content/skin/popout_icon.png) no-repeat center center;
}
.button-cliqz:hover .cliqz-ac-logo-icon {
  background: none;
}

.cliqz-history {
  background: url(chrome://cliqzres/content/skin/visited.gif) no-repeat center center;
}

.cliqz-bookmark {
  background: url(chrome://cliqzres/content/skin/bookmarked.gif) no-repeat center center;
}

.cliqz-tag {
  background: url(chrome://cliqzres/content/skin/bookmarked.gif) no-repeat center center;
}

.cliqz-results {
  background: url(chrome://cliqzres/content/skin/un-bookmarked.gif) no-repeat center center;
}

.cliqz-ac-url-detail-box {
  padding: 0px 5px;
  border-right: 2px solid white;
}

.cliqz-ac-url-domain {
  /*font-weight: bold;*/
}

.cliqz-ac-url-host {
  font-size: 10pt;
  color: #007aff;
  font-weight: 400;
}

.cliqz-ac-url-path {
  font-size: 10pt;
  color: #cccccc;
  font-weight: 400;
}

.cliqz-autocomplete-container {

}

.cliqz-urlbar-Last-search {
  color: white;
  background-color: grey;
  margin: 0px;
  padding: 1px 6px 2px 6px;
  border-radius: 1px;
  max-width: 200px;
  text-overflow: ellipsis;
  overflow: hidden;
}

#right-cliqz {
  display: none;
}

/* url container */
.ac-url-box {
  height: 19px;
  padding-bottom: 2px;
}

.ac-url-text {
  /* we handle urls */
  display: none;
}

.ac-emphasize-text  {
  background-color: transparent;
  box-shadow: none;
  font-weight: 700;
  /*color: #669999;*/
}

.autocomplete-richlistitem {
}

.autocomplete-richlistitem[type="bookmark"],
.autocomplete-richlistitem[type="tag"]{
}

.autocomplete-richlistitem[type="switchtab"]{
}
/* history */
.autocomplete-richlistitem[type="favicon"]{
}


.cliqz-footer {
  background: url(chrome://cliqzres/content/skin/drag_icon.png) no-repeat 50% 50%;
  background-size: 20px 14px;
}

/* misc */

.hidden {
  visibility: hidden;
  display: none !important;
}

